# islamic-apis

./: .env  .env.example  .gitignore  Cargo.toml  README.md  current_schema.sql  dev-docs.txt  dua_api_tester.py  summary.md  test_dua_api.bat
dua-api/: Cargo.toml  schema.sql
dua-api/migrations/: 001_initial_schema.sql
dua-api/src/: handlers.rs  main.rs  models.rs  repository.rs  services.rs
migrations/: 002_create_zakat_tables.sql
prayer-times-api/: Cargo.toml
prayer-times-api/src/: calculations.rs  handlers.rs  main.rs  models.rs  preferred.rs  services.rs
qibla-api/: Cargo.toml
qibla-api/src/: calculations.rs  handlers.rs  main.rs  models.rs
shared/: Cargo.toml
shared/src/: cache.rs  config.rs  database.rs  error.rs  lib.rs  middleware.rs  middleware_simple.rs  rate_limit.rs  simple_rate_limit.rs  validation.rs
zakat-api/: Cargo.toml
zakat-api/src/: calculations.rs  handlers.rs  main.rs  models.rs  repository.rs  services.rs
