[workspace]
resolver = "2"
members = [
    "prayer-times-api",
    "qibla-api", 
    "dua-api",
    "zakat-api",
    "shared"
]

[workspace.dependencies]
# Web framework - using proven stable versions
axum = "0.6.20"
tokio = { version = "1.28", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace", "timeout"] }
hyper = "0.14"

# Database - using stable versions with proper features
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
redis = { version = "0.22", features = ["tokio-comp", "connection-manager"] }

# Serialization - stable versions
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Time handling - stable versions
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.2"

# Utilities - stable versions
uuid = { version = "1.3", features = ["v4", "serde"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
config = "0.13.3"
dotenv = "0.15.0"

# Validation - stable version
validator = { version = "0.16.1", features = ["derive"] }

# HTTP client - stable version
reqwest = { version = "0.11.18", features = ["json"] }

# Math
libm = "0.2.7"

# CSV processing
csv = "1.2.2"

# Hijri calendar
hijri_date = "0.5.0"

# Decimal calculations - stable version with sqlx support
rust_decimal = { version = "1.30.0", features = ["serde", "db-postgres"] }
rust_decimal_macros = "1.30.0"