[package]
name = "prayer-times-api"
version = "1.0.0"
edition = "2021"

[dependencies]
# Workspace dependencies
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenv.workspace = true
validator.workspace = true
uuid.workspace = true
redis.workspace = true

# Local dependencies
shared = { path = "../shared" }

# Prayer calculation specific
hijri_date.workspace = true
csv.workspace = true
libm = "0.2"

[[bin]]
name = "prayer-times-api"
path = "src/main.rs"

[profile.dev]
debug = 1  # Reduce debug info
split-debuginfo = "off"  # Disable PDB splitting

[profile.test]
debug = 1
split-debuginfo = "off"