[package]
name = "qibla-api"
version = "1.0.0"
edition = "2021"

[dependencies]
# Workspace dependencies
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenv.workspace = true
validator.workspace = true
redis.workspace = true
chrono.workspace = true  # Added missing chrono dependency

# Local dependencies
shared = { path = "../shared" }

# Math
libm = "0.2"

[[bin]]
name = "qibla-api"
path = "src/main.rs"