[package]
name = "shared"
version = "1.0.0"
edition = "2021"

[dependencies]
# Workspace dependencies
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenv.workspace = true
validator.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
redis.workspace = true
hyper.workspace = true
rust_decimal.workspace = true

# Additional dependencies that might be needed
futures = "0.3"